модалка, убрал img, падинги

--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -9,10 +9,10 @@
 <form class="form-modak">
     <p class="call-back">Become our partner</p>
     <div class="form-modak_content">
-        <label class="modal-lable">Name
+        <label class="modal-lable momble-mod">Name
             <input class="input-style" type="text" name="name" placeholder="Name*" required minlength="4">  
         </label>
-        <label  class="modal-lable">Surname
+        <label  class="modal-lable momble-mod">Surname
             <input class="input-style" type="text" name="Surname" placeholder="Surname*" required minlength="4">    
         </label>
     </div>
