--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -35,6 +35,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
+    margin-bottom: 16px;
     line-height: 1.13;
     color: var(--pre-title-color);
     @media screen and (min-width: 768px) {
