--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -14,82 +14,100 @@
             <input class="radio" type="radio" name="com" id="r10">
             
             <div class="reviews__slide s1">
+                <img class="reviews__img" src="./images/reviews/viktor.png" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">I am a team leader on this project. I have been doing code review and working on JS
+                        animations</article>
+                    <div class="gradient">
+                    </div>
+                </div>
+            
+                <div class="slide-p">
+                    <p>
+                        Viktor, City
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/reviews/vika-min.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Привет!
+                        Я - Виктория, из Днепра. Прохожу обучение на курсе FullStack GoIt. На данный момент scrum-master в командном
+                        проекте по
+                        HTML-CSS.</article>
+                    <div class="gradient">
+                    </div>
+                </div>
+            
+                <div class="slide-p">
+                    <p>
+                        Виктория, Днепр
+                    </p>
+                </div>
+            </div>
+            
+            <div class="reviews__slide">
                 <img class="reviews__img" src="./images/mobile/Display-x1/SAVE_20210920_165639.jpg" alt="photo">
                 <div class="container-comment">
                     <article class="comment">То что вы читаете, было не без труда создано мной</article>
+                    <div class="gradient">
+                    
+                    </div>
                 </div>
-                <div class="gradient">
-
-                </div>
-
+                
                 <div class="slide-p">
                     <p >
-                        Дмитрий, Хмельницкий
+                        Дмитрий, Киев
                     </p>
                 </div>
             </div>
 
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/natalia-min.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <article class="comment"><span class="before">Мобильное</span> меню должно быть не только красивым, но и правильно отображаться на разных устройствах.</article>
+                    <div class="gradient">
+                    </div>
                 </div>
+                
 
                 <div class="slide-p">
                     <p>
-                        Emily, Los Angeles
+                        Наталья, Днепр
                     </p>
                 </div>
             </div>
 
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/kateryna-min.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <article class="comment">Секция "Сontаcts" делалась на одном дыхании, благодаря вдохновению, полученному от слаженной работы нашей замечательной
+                    команды!</article>
+                    <div class="gradient">
+                    </div>
                 </div>
+                
 
                 <div class="slide-p">
                     <p>
-                        Emily, Los Angeles
+                        Екатерина, Киев
                     </p>
                 </div>
             </div>
 
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/svetlana.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <article class="comment">Изменения — это всегда страшно. Но никто не изменит за вас вашу жизнь. Вы понимаете, какой должны сделать выбор, но
+                    несмотря на страх, движетесь вперед. Это главное правило успеха.</article>
+                    <div class="gradient">
+                    </div>
                 </div>
 
                 <div class="slide-p">
                     <p>
-                        Emily, Los Angeles
-                    </p>
-                </div>
-            </div>
-
-            <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
-                <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
-                </div>
-
-                <div class="slide-p">
-                    <p>
-                        Emily, Los Angeles
-                    </p>
-                </div>
-            </div>
-
-            <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
-                <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
-                </div>
-
-                <div class="slide-p">
-                    <p>
-                        Emily, Los Angeles
+                        Светлана, Киев
                     </p>
                 </div>
             </div>
