--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -25,16 +25,16 @@
   width: 280px;
   height: auto;
 
-  padding: 48px 50px 20px 50px;
-
+  padding: 48px 50px 15px 50px;
+  overflow: hidden;
   &::before {
     content: '';
     background-image: url(../images/q.png);
     background-size: cover;
 
     position: absolute;
-    top: 35px;
-    left: 25px;
+    top: 30px;
+    left: 40px;
     z-index: 0;
 
     width: 54px;
@@ -42,12 +42,12 @@
 
     @media screen and (min-width: 768px) {
       top: 35px;
-      left: 115px;
+      left: 40px;
     }
 
-    @media screen and (min-width: 1200px) {
-      left: 28%;
-    }
+    // @media screen and (min-width: 1200px) {
+    //   left: 28%;
+    // }
   }
 }
 
@@ -62,32 +62,30 @@
   pointer-events: none;
 
   font-size: 12px;
-  line-height: 2.55;
+  line-height: 2.45;
   text-align: center;
 }
 
 .gradient {
   position: absolute;
-  top: 43%;
-  left: 18%;
-  width: 180px;
-  height: 73px;
+  top: 76px;
+  left: 50px;
+  width: 65%;
+  height: 100%;
   background-image: repeating-linear-gradient(#bbb 1px, transparent 3px, transparent 30px);
 
   @media screen and (min-width: 768px) {
-    top: 54%;
-    left: 20%;
-    width: 60%;
-    height: 25px;
+    top: 75px;
+    left: 55px;
+    width: 80%;
+    height: 100%;
     background-image: repeating-linear-gradient(#bbb 1px, transparent 3px, transparent 30px);
   }
 
   @media screen and (min-width: 1200px) {
-    top: 54%;
-
-    left: 30%;
-    width: 40%;
-    background-image: repeating-linear-gradient(#bbb 1px, transparent 2px, transparent 30px);
+    left: 50px;
+    width: 90%;
+    background-image: repeating-linear-gradient(#bbb 1px, transparent 3px, transparent 30px);
   }
 }
 
