--- a/src/sass/_main-modal.scss
+++ b/src/sass/_main-modal.scss
@@ -168,6 +168,7 @@
     padding-bottom: 12px;
     padding-left: 16px;
     cursor: pointer;
+    resize: none;
   }
   
   .modal-form__label-check {
