--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -25,7 +25,7 @@
                     Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
                     Aliquam erat volutpat. Aenean accumsan.
                 </p>
-                <button type="button" class=" button about-btn">Read more
+                <button type="button" class="button about-btn" data-aboutmodal-open>Read more
                     <svg class="about-btn__icon" width="5" height="8">
                         <use href="./images/sprite.svg#icon-next2">
                         </use>
@@ -34,29 +34,25 @@
             </li>
         </ul>           
     </div>
-    <div class="modal3">
-        <button type="button" class="modal3__btn-close" data-modal-close>
-            <svg class="modal3__btn-close-icon" width="14" height="14">
+    <div class="is-hidden modal-about" data-aboutmodal>
+        <button type="button" class="modal-about__btn-close" data-aboutmodal-close>
+            <svg class="modal-about__btn-close-icon" width="14" height="14">
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
             </svg>
         </button>
-        <b class="modal3__title">Преимущества нашей продукции</b>
-        <p  class="modal3__text"> Главное преимущество употребления молочных продуктов — это их способность благотворно влиять на микрофлору кишечника.
-        Также они содержат кальций и витамин Д, которые укрепляют кости и препятствуют развитию раковых опухолей. Наиболее
-        ценным источником здоровья является молоко.</p>
-        <form action="#" class="modal3-form">            
-            
-            <div class="modal3-form-field">
-                <label for="input-tel" class="modal3-form-field__label">Телефон для обратного звонка</label>
-                <span class="input3-wrapper">
-                    <input type="tel" name="modal-tel" id="input-tel" class="modal3-form-field__input" placeholder=" +38 (067) 000 00 00" >                    
-                </span>
-            </div>                       
-        <button type="submit" class="form3-btn" >Заказать обратный звонок
-            <svg class="modal3-form-field__icon" width="14" height="14">
+        <b class="modal-about__title">The advantages of our products</b>
+        <p  class="modal-about__text"> The main advantage of consuming dairy products is their ability to have a beneficial effect on the intestinal microflora. They also contain calcium and vitamin D, which strengthen bones and prevent the development of cancerous tumors. The
+        most valuable source of health is milk.              If you want to know more about our products, please leave a request.</p>        
+        <form action="#" class="modal-about-form">  
+            <label for="input-tel" class="modal-about-form-field__label">Телефон для обратного звонка</label>
+            <span class="input3-wrapper">
+                <input type="tel" name="modal-tel" id="input-tel" class="modal-about-form-field__input" placeholder=" +38 (067) 000 00 00" >                    
+            </span>                                       
+            <button type="submit" class="form3-btn" >Заказать обратный звонок
+            <svg class="modal-about-form-field__icon" width="14" height="14">
                 <use href="./images/sprite.svg#icon-phone-black-18dp-1"></use>
             </svg>
         </button>
-        </form>
+        </form>        
     </div>
 </section>
