--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-mainmodal>
+<div class="backdrop backdrop-index is-hidden " data-mainmodal>
     <div class="main-modal">
         <button type="button" class="main-modal__button_close" width="30" height="30" data-mainmodal-close><svg
                 class="button-close__icon modal-icon" width="18" height="18">
@@ -37,18 +37,21 @@
                     class="modal-form__input form-textarea-input"></textarea>
             </label>
             <label class="modal-form__label-check">
-                <div class="label-checkbox-container">
+                <span class="label-checkbox-container">
+
                     <input type="checkbox"
                         class="modal-form__checkbox-hidden visually-hidden">
                     <span class="modal-form__checkbox-icon modal-icon">
                     </span>
+                
                     <span class="checkbox-container-text">
                         I agree to the newsletter and accept
                     </span>
                         <a href="" class="modal-form__link link">
                             Terms of an agreement
                     </a>
-                </div> 
+
+                </span> 
             </label>
             <button type="submit" class="modal__button-submit main-button">Отправить</button>
      </form>
