Герой і хедер на десктоп

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -51,7 +51,7 @@
       </ul>
     </div>
     <div class="hero-info">
-      <picture class="hero-info__image">
+      <picture>
         <source
           srcset="
             ./images/tablet/display-x1/tablet-milk-x1.png 1x,
@@ -69,6 +69,7 @@
           type="image/png"
         />
         <img
+          class="hero-info__image"
           src="./images/tablet/display-x1/tablet-milk-x1.png"
           width="124"
           height="126"
@@ -115,6 +116,7 @@
         type="image/png"
       />
       <img
+        class="hero-counter__image-item"
         src="./images/tablet/display-x1/tablet-girl-x1.png"
         width="168"
         height="133"
