--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -45,6 +45,18 @@
   font-size: 16px;
   line-height: 21px;
   color: var(--secondary--title-color);
+  padding: 10px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  &--current {
+    color: var(--accent-color);
+  }
 }
 .header__button {
   display: none;
@@ -63,10 +75,12 @@
     font-weight: 700;
     font-size: inherit;
     line-height: 1.31;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
       background-color: var(--icons-bg-hover-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
   @media screen and (min-width: 1200px) {
