--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -82,6 +82,10 @@
     top: 102px;
     left: 34px;
   }
+  @media screen and (min-width: 1200px) {
+    top: 171px;
+    left: 69px;
+  }
 }
 .hero__title {
   margin-bottom: 19px;
@@ -103,6 +107,10 @@
       font-size: 34px;
       line-height: 0.91;
     }
+    @media screen and (min-width: 1200px) {
+      font-size: 58px;
+      line-height: 0.91;
+    }
   }
   @media screen and (min-width: 768px) {
     font-size: 22px;
@@ -111,6 +119,12 @@
     width: 162px;
     margin-bottom: 20px;
   }
+  @media screen and (min-width: 1200px) {
+    font-size: 38px;
+    line-height: 1.16;
+    width: 277px;
+    margin-bottom: 25px;
+  }
 }
 .hero__list {
   display: flex;
@@ -118,15 +132,18 @@
 .hero__item {
   &:not(:last-child) {
     margin-right: 8px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 15px;
+    }
   }
 }
 .hero__link {
   height: 24px;
-
   border-radius: 20px;
   font-family: inherit;
   font-size: 8px;
   line-height: 1.25;
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -135,11 +152,12 @@
     background-color: var(--accent-color);
     color: var(--btn-bg-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
       background-color: var(--icons-bg-hover-color);
       color: var(--accent-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
   &--made {
@@ -147,11 +165,23 @@
     background-color: var(--btn-bg-color);
     color: var(--accent-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
       background-color: var(--icons-bg-hover-color);
       color: var(--accent-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    height: 40px;
+    font-size: 14px;
+    line-height: 1.29;
+    &--products {
+      width: 104px;
+    }
+    &--made {
+      width: 138px;
     }
   }
 }
@@ -164,8 +194,20 @@
     display: flex;
     height: 126px;
   }
+  @media screen and (min-width: 1200px) {
+    top: 429px;
+    left: 37px;
+    height: 191px;
+  }
 }
-
+.hero-info__image {
+  width: 124px;
+  height: 126px;
+  @media screen and (min-width: 1200px) {
+    width: 188px;
+    height: 191px;
+  }
+}
 .hero-info__description {
   display: flex;
   flex-direction: column;
@@ -180,6 +222,12 @@
   line-height: 1.5;
   color: var(--btn-bg-color);
   margin-bottom: 7px;
+  @media screen and (min-width: 1200px) {
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+  }
 }
 .hero-info__link {
   width: 18px;
@@ -197,9 +245,17 @@
     background-color: var(--accent-color);
     color: var(--btn-bg-color);
   }
+  @media screen and (min-width: 1200px) {
+    width: 26px;
+    height: 26px;
+  }
 }
 .hero-info__icon {
   fill: currentColor;
+  @media screen and (min-width: 1200px) {
+    width: 7px;
+    height: 7px;
+  }
 }
 .hero-counter {
   display: none;
@@ -209,16 +265,17 @@
     top: 97px;
     right: 34px;
   }
+  @media screen and (min-width: 1200px) {
+    top: 156px;
+    right: 54px;
+  }
 }
 .hero-counter__first {
   margin-bottom: 15px;
 }
-// .hero-counter__second {
-// }
 .hero-counter__number {
   position: relative;
   font-family: Titan One;
-  font-style: normal;
   font-weight: 400;
   font-size: 28px;
   line-height: 1.14;
@@ -227,12 +284,10 @@
   display: flex;
   justify-content: right;
   z-index: 0;
-
-  &--cafes {
-    color: var(--btn-bg-color);
-  }
-  &--trucks {
-    color: var(--accent-color);
+  color: var(--accent-color);
+  @media screen and (min-width: 1200px) {
+    font-size: 46px;
+    line-height: 1.15;
   }
   &::after {
     position: absolute;
@@ -245,6 +300,12 @@
     right: -9px;
     top: -2px;
     z-index: -10;
+    @media screen and (min-width: 1200px) {
+      width: 30px;
+      height: 30px;
+      right: -20px;
+      top: -2px;
+    }
   }
 }
 
@@ -252,10 +313,13 @@
   font-weight: 400;
   font-size: 8px;
   line-height: 1.25;
-
   text-align: right;
-
   color: var(--btn-bg-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.5;
+  }
 }
 .hero-counter__image {
   display: none;
@@ -265,29 +329,37 @@
     top: 266px;
     right: 34px;
   }
+  @media screen and (min-width: 1200px) {
+    top: 433px;
+    right: 66px;
+  }
+}
+.hero-counter__image-item {
+  width: 168px;
+  height: 133px;
+  @media screen and (min-width: 1200px) {
+    width: 293px;
+    height: 232px;
+  }
 }
 // .hero-image {
-//   position: absolute;
-//   top: 9px;
-//   left: 81px;
-//   height: 410px;
 //   opacity: 0.2;
 //   transform: scale(0.01) rotate(360deg);
 //   transition-property: transform, opacity;
 //   transition-duration: 500ms;
 // }
-// .prili-leto{
+// .prili-leto {
 //   opacity: 1;
 //   transform: scale(1);
 // }
 
-// ._anim-transform{
+// ._anim-transform {
 //   opacity: 0.2;
 //   transform: rotateY(-100deg);
 //   transition-property: transform, opacity;
 //   transition-duration: 500ms;
 // }
-// ._bomba{
+// ._bomba {
 //   opacity: 1;
 //   transform: rotateY(0deg);
 // }
