--- a/src/sass/_modal-footer.scss
+++ b/src/sass/_modal-footer.scss
@@ -38,7 +38,7 @@
     top: 8px;
     right: 8px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--mobile-menu-bg-color);
+    background-color: var(--svg-bg-color);
     display: flex;
     align-items: center;
     justify-content: center;
