--- a/src/sass/_modal-location.scss
+++ b/src/sass/_modal-location.scss
@@ -50,7 +50,7 @@ body.scroll{
     top: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-    background-color: var(--mobile-menu-bg-color);
+    background-color: var(--svg-bg-color);
     width: 30px;
     height: 30px;
     display: flex;
