--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -38,19 +38,16 @@
             </label>
             <label class="modal-form__label-check">
                 <span class="label-checkbox-container">
-
                     <input type="checkbox"
                         class="modal-form__checkbox-hidden visually-hidden">
                     <span class="modal-form__checkbox-icon modal-icon">
                     </span>
-                
-                    <span class="checkbox-container-text">
-                        I agree to the newsletter and accept
-                    </span>
+                    <div class="box-text">   
+                        I agree to the newsletter and accept  
                         <a href="" class="modal-form__link link">
                             Terms of an agreement
-                    </a>
-
+                        </a>
+                    </div>
                 </span> 
             </label>
             <button type="submit" class="modal__button-submit main-button">Отправить</button>
