--- a/src/sass/_main-modal.scss
+++ b/src/sass/_main-modal.scss
@@ -10,20 +10,22 @@
 
   /* styles-main-modal **************/ 
 .main-modal {
-    position: absolute;
+  position: absolute;
+  display: block;
     z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: auto;
-    display: block;
     padding: 40px;
     background: var(--background-main-modal);
     box-shadow: var(--box-shadow);
     border-radius: 7px;
         @media (min-width: 320px){
-          padding: 30px;
-          min-width: 100%;
+          padding: 40px;
+          min-width: 80%;
+        margin-left: auto;
+        margin-right: auto;
         }  
         @media (min-width: 480px){
           padding: 40px;
@@ -79,6 +81,9 @@
       font-size: 20px;
       line-height: 1.5;
       letter-spacing: 0.03em;
+      @media screen and (max-width:385px ) {
+        font-size: 18px;
+      }
   } 
 .modal-title__text {
   color: var(--accent-color-mod);
@@ -170,26 +175,40 @@
     cursor: pointer;
     resize: none;
   }
- 
+ /*********************************/
   .modal-form__label-check {
-    display: block;
+    display: inline-block;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--color-icon);
+    white-space: nowrap;
+   
   }
-  
-  .label-checkbox-container {
+  .box-text {
     display: inline-block;
+     font-style: normal;
+     align-self: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16; 
+    letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  margin-right: 0.3em;
+  @media screen and (max-width: 479px) {
+    display: inline-flex;
+    flex-wrap: wrap;
+  
+  }
+ 
+  }
+
+  .label-checkbox-container {
+    display: block;
     align-self: center; 
     align-items: center;
     width: 100%; 
-    @media screen and (max-width: 443px) {
-      display: inline-block;
-      align-self: center;
-      align-items: center;
-      width: 100%; 
     }
-  }
+
   
   .modal-form__checkbox-hidden {
     position: absolute;
@@ -227,7 +246,7 @@
           border: transparent;
         }
        
-  } 
+  } /*
   .checkbox-container-text {
     display: inline-block;
     @media screen and (max-width: 479px) {
@@ -244,22 +263,18 @@
     letter-spacing: 0.03em;
   color: var(--main-text-color);
   margin-right: 0.3em;
-  } 
+  } */
   .modal-form__link {
     display: inline-block;
     text-decoration: underline;
-     font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
     color: var(--accent-color-mod);
-    @media screen and (max-width: 479px) {
     font-style: normal;
     font-weight: 400;
     font-size: 11px;
     line-height: 1.16;
     letter-spacing: 0.01em;
+    @media screen and (max-width: 479px) {
+     
     }
     &:hover,
     &:focus {
