--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,4 +1,5 @@
 .products {
+  padding-top: 122px;
   padding-bottom: 98px;
 }
 
@@ -11,9 +12,20 @@
   text-align: center;
   text-transform: uppercase;
 
-  color: #ffa5ba;
+  color: var(--pre-title-color);
 
   margin-bottom: 15px;
+}
+@media screen and (max-width: 767px){
+  .products-list__text--tablet{
+    display:none;
+  }
+}
+@media screen and (min-width: 768px){
+   .products-list__text--mobile{
+    display:none;
+  }  
+
 }
 .products__heading {
   font-family: Titan One;
@@ -23,26 +35,61 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #d41443;
+  color: var(--main-title-color);
 
   margin-bottom: 144px;
+  @media screen and (min-width: 768px){
+    margin-bottom: 150px;
+  }
+  @media screen and (min-width: 1200px){
+    margin-bottom: 259px;
+  }
 }
-
+.products-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: center;
+    margin-left:-20px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-left:-23px;
+  }
+}
 .products-list__products-item {
   position: relative;
-  display: flex;
+  /*display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: center;*/
   width: 280px;
   height: 485px;
   border-radius: 24px;
+  @media screen and (min-width:768px){
+    width: 220px;
+    height:485px;}
+  @media screen and (min-width:1200px){
+    height:525px;
+  }
   &::before {
     position: absolute;
     content: '';
-    bottom: 265px;
-    background-image: url(../images/mobile/Display-x1/elipse.png);
-    width: 32px;
-    height: 4px;
+    top: 214px;
+    left:50%;
+    transform: translate(-50%,  0); 
+    width: 26px;
+    height: 6px;
+    background-image: url(../images/png/points.png);
+    background-repeat: no-repeat;
+    @media screen and (min-width: 768px) {
+      top: 205px;
+    }
+    @media screen and (min-width: 768px) {
+      top: 229px;
+    }
   }
   &:not(:last-child) {
     margin-bottom: 130px;
@@ -50,24 +97,32 @@
       margin-bottom: 0px;
     }
   }
+  @media screen and (min-width: 768px){
+    flex-basis: calc(100%/3 - 20px);
+    margin-left: 20px;
+  }
+  @media screen and (min-width: 1200px){
+    flex-basis: calc(100%/3 - 20px);
+    margin-left: 23px;
+  }
 }
-.products-list__products-item+.products-list__products-item{
+/*.products-list__products-item + .products-list__products-item {
   @media screen and (min-width: 768px) {
     margin-left: 20px;
   }
   @media screen and (min-width: 1200px) {
     margin-left: 24px;
   }
-}
+}*/
 .products-list__products-item--color {
   &:nth-child(1) {
-    background-color: #ffb8ca;
+    background-color: var(--secondary-bg-color);
   }
   &:nth-child(2) {
-    background-color: #f0d1a5;
+    background-color: var(--coffee-bg-color);
   }
   &:nth-child(3) {
-    background-color: #c2e297;
+    background-color: var(--green-bg-color);
   }
 }
 .products-list__text {
@@ -81,29 +136,41 @@
   text-align: center;
   letter-spacing: 0.04em;
 
-  color: #ffffff;
-  margin: 0px 40px;
+  color: var(--secondary--title-color);
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px ) {
+    margin-bottom: 40px;
+}
 }
 .products-list__image {
   display: block;
   margin: -113px auto 0px auto;
+  @media screen and (min-width: 768px ) {
+    height: 233px;
+    width: 220px;
+    margin: -102px auto 0px auto;
+}
+  @media screen and (min-width: 1200px){
+    height: 335px;
+    width: 335px;
+    margin: -210px auto 0px auto;
+  }
 }
 
 .products-list__description {
   display: block;
+  padding: 22px 40px 41px 40px;
+  text-align:center;
+  @media screen and (min-width: 768px ) {
+    padding: 30px 11px 40px 11px;
 }
-
-.products-list {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
-  @media screen and (min-width: 768px) {
-    flex-direction: row;
-    justify-content: center;
+  @media screen and (min-width: 1200px){
+    height: 335px;
+    padding: 38px 44px 50px 44px;
   }
 }
+
+
 
 .products-list__heading {
   font-family: Titan One;
@@ -116,7 +183,13 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--secondary--title-color);
+  margin-bottom: 66px;
+  @media screen and (min-width: 1200px){
+    margin-bottom: 70px;
+  }
+  
+  
 }
 
 .products-list__button {
@@ -125,18 +198,25 @@
   width: 40px;
   height: 40px;
   border: none;
-  fill: #d41443;
+
+  margin-left:auto;
+  margin-right:auto;
+  
+
   display: flex;
   align-items: center;
   justify-content: center;
 }
-._anim-transform{
+.products-list__button-icon {
+  fill: var(--svg-secondary-fill);
+}
+._anim-transform {
   opacity: 0.2;
   transform: rotateY(-100deg);
   transition-property: transform, opacity;
   transition-duration: 1000ms;
 }
-._bomba{
+._bomba {
   opacity: 1;
   transform: rotateY(0deg);
 }
