--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -2,14 +2,23 @@
   visibility: hidden;
 }
 .contacts {
-  // background-color: linear-gradient(#fff 4%, #fff5f6 0 100%);
-  background: linear-gradient(to top, var(--main-bg-color) 92%,  var(--secondary--title-color) 0%);
-}
-@media screen and (min-width: 768px) {
-  .contacts {
-    background-color: linear-gradient(#fff 11%, #fff5f6 0 100%);
+  background: linear-gradient(to top, var(--main-bg-color) 92%, var(--secondary--title-color) 0%);
+  @media screen and (min-width: 768px) {
+    background: linear-gradient(to top, var(--main-bg-color) 86%, var(--secondary--title-color) 0%);
   }
+  // @media screen and (min-width: 1200px) {
+  //   background-image: url(../images/desktop/display-x1/desktop-contacts-x1.png);
+  //   background-size: contain;
+  //   background-position: 50%;
+  //   background-repeat: no-repeat;
+  // }
+  // @media screen and (min-device-pixel-ratio: 2),
+  //   screen and (min-resolution: 192dpi),
+  //   screen and (min-resolution: 2dppx) {
+  //   background-image: url(../images/desktop/display-x2/desktop-contacts-x2.png);
+  // }
 }
+
 .contacts-list {
   display: flex;
   flex-direction: column;
@@ -29,7 +38,6 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 
   font-size: 12px;
 }
@@ -40,6 +48,11 @@
 @media screen and (min-width: 320px) {
   .contacts-list_card:not(:last-child) {
     margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 319px) {
+  .contacts-list_card {
+    padding: 10px 20px;
   }
 }
 @media screen and (min-width: 320px) {
