--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -9,7 +9,7 @@
     height: 399px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     height: 665px;
   }
 }
@@ -27,15 +27,61 @@
     left: 36px;
   }
 
-  @media screen and (min-width: 417px) {
+  @media screen and (min-width: 418px) {
     right: 36px;
+  }
+  @media screen and (min-width: 768px) {
+    top: 31px;
+    right: 143px;
+    width: 324px;
+    height: 322px;
+  }
+  @media screen and (min-width: 1200px) {
+    top: 52px;
+    right: 221px;
+    width: 538px;
+    height: 538px;
   }
 }
 
+.hero-image {
+  position: absolute;
+  top: 9px;
+  left: 81px;
+  height: 410px;
+  @media screen and (min-width: 768px) {
+    top: 32px;
+    left: 71px;
+    height: 336px;
+    width: 143px;
+  }
+  @media screen and (min-width: 1200px) {
+    top: 56px;
+    left: 119px;
+    height: 557px;
+    width: 236px;
+  }
+}
+.hero-image__item {
+  width: 170px;
+  height: 410px;
+  @media screen and (min-width: 768px) {
+    height: 336px;
+    width: 143px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 557px;
+    width: 236px;
+  }
+}
 .hero__content {
   position: absolute;
   left: 20px;
   top: 137px;
+  @media screen and (min-width: 768px) {
+    top: 102px;
+    left: 34px;
+  }
 }
 .hero__title {
   margin-bottom: 19px;
@@ -52,8 +98,18 @@
   &--accent {
     font-size: 48px;
     line-height: 0.96;
-
     color: var(--accent-color);
+    @media screen and (min-width: 768px) {
+      font-size: 34px;
+      line-height: 0.91;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 22px;
+    line-height: 1.14;
+    text-shadow: none;
+    width: 162px;
+    margin-bottom: 20px;
   }
 }
 .hero__list {
@@ -82,7 +138,7 @@
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      background-color: var(--btn-bg-color);
+      background-color: var(--icons-bg-hover-color);
       color: var(--accent-color);
     }
   }
@@ -94,34 +150,133 @@
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      background-color: var(--accent-color);
-      color: var(--btn-bg-color);
+      background-color: var(--icons-bg-hover-color);
+      color: var(--accent-color);
     }
   }
 }
-
-.hero-image {
-  position: absolute;
-  top: 9px;
-  left: 81px;
-  height: 410px;
-  opacity: 0.2;
-  transform: scale(0.01) rotate(360deg);
-  transition-property: transform, opacity;
-  transition-duration: 500ms;
-}
-.prili-leto{
-  opacity: 1;
-  transform: scale(1);
+.hero-info {
+  display: none;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 245px;
+    left: 34px;
+    display: flex;
+    height: 126px;
+  }
 }
 
-// ._anim-transform{
+.hero-info__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 6px;
+}
+.hero-info__text {
+  width: 114px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 8px;
+  line-height: 1.5;
+  color: var(--btn-bg-color);
+  margin-bottom: 7px;
+}
+.hero-info__link {
+  width: 18px;
+  height: 18px;
+  border-radius: 20px;
+  background-color: var(--btn-bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background-color: var(--accent-color);
+    color: var(--btn-bg-color);
+  }
+}
+.hero-info__icon {
+  fill: currentColor;
+}
+.hero-counter {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    top: 97px;
+    right: 34px;
+  }
+}
+.hero-counter__first {
+  margin-bottom: 15px;
+}
+// .hero-counter__second {
+// }
+.hero-counter__number {
+  position: relative;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: right;
+  z-index: 0;
+
+  &--cafes {
+    color: var(--btn-bg-color);
+  }
+  &--trucks {
+    color: var(--accent-color);
+  }
+  &::after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: #fff;
+    right: -9px;
+    top: -2px;
+    z-index: -10;
+  }
+}
+
+.hero-counter__text {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+
+  text-align: right;
+
+  color: var(--btn-bg-color);
+}
+.hero-counter__image {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    top: 266px;
+    right: 34px;
+  }
+}
+// .hero-image {
+//   position: absolute;
+//   top: 9px;
+//   left: 81px;
+//   height: 410px;
 //   opacity: 0.2;
-//   transform: rotateY(-100deg);
+//   transform: scale(0.01) rotate(360deg);
 //   transition-property: transform, opacity;
 //   transition-duration: 500ms;
 // }
-// ._bomba{
+// .prili-leto{
 //   opacity: 1;
-//   transform: rotateY(0deg);
+//   transform: scale(1);
 // }
