--- a/src/sass/_mobi-menu.scss
+++ b/src/sass/_mobi-menu.scss
@@ -1,22 +1,27 @@
 .menu-container {
   background-color: var(--mobile-menu-bg-color);
-  position: absolute;
+  position: fixed;
   width: 100vw;
   width: -webkit-fill-available;
   height: 100vh;
-  display: none;
+  opacity: 0;
+  visibility: visible;
   top: 0;
-  transform: translateX(101%);
-  transition: transform 2000ms var(--timing-function);
+
+  transform: translatex(100%);
+  transition: transform 500ms var(--timing-function);
+
   &.is-open {
-    display: block;
-    transform: translateX(0);
-    transition: transform 2000ms var(--timing-function);
+    opacity: 1;
+    transform: translatex(0%);
+    visibility: visible;
   }
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+
+    overflow: hidden;
   }
   &.is-open .menu-button__icon-menu {
     display: block;
@@ -25,9 +30,16 @@
     display: none;
   }
   @media screen and(min-width: 480px) {
-    width: 34%;
-    top: -37px;
-    left: 70%;
+    width: 35%;
+    top: 0;
+    left: 65%;
+    height: 100vh;
+  }
+  @media screen and(min-width: 768px) {
+    width: 35%;
+    top: 0px;
+    left: 65%;
+    height: 100vh;
   }
 }
 
@@ -35,32 +47,45 @@
   font-weight: bold;
   font-size: 16px;
   line-height: calc(21 / 16);
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  /*align-items: center;*/
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
   background-color: var(--btn-bg-color);
-  padding: 11.5px 69.67px 11.5px 48.64px;
-  margin: 0;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 19px;
+
+  min-width: 209px;
+  height: 44px;
 
   color: var(--btn-header-secondary-bg-color);
   position: relative;
   border-radius: 22px;
   border: none;
-
-  top: 60px;
-  left: 21px;
+  &:hover,
+  &:focus {
+    background: var(--icons-bg-hover-color);
+  }
+  @media screen and (min-width: 480px) and (max-width: 768px) {
+    min-width: 150px;
+  }
 }
 
 .menu-container__menu-button-icon {
-  position: absolute;
-  top: 19px;
-  right: 48.64px;
+  margin-left: 16px;
+  fill: var(--accent-color);
+  transform: scale(2.2);
+  padding-top: 1px;
 }
 
 .menu-close {
   position: absolute;
 
   right: 28px;
-  top: 23.26px;
+  top: 23px;
   background-color: transparent;
   border: none;
   width: 14px;
@@ -77,9 +102,11 @@
   font-family: DM Sans;
   font-weight: bold;
   font-size: 14px;
-  line-height: 18px;
+  line-height: calc(18 / 14);
   display: inline-block;
   align-items: center;
+
+  padding-left: 21px;
 
   color: var(--secondary-text-color);
   &:hover,
@@ -90,8 +117,6 @@
 }
 
 .mobile-menu__list {
-  margin-top: 99px;
-  padding-bottom: 185px;
   border-top: 1px solid var(--border-menu);
 }
 
@@ -99,11 +124,12 @@
   border-bottom: 1px solid var(--border-menu);
 }
 
-.mobile-menu__link {
-  padding-left: 21px;
-}
 .menu-open {
   border: none;
   background-color: transparent;
   fill: var(--accent-color);
+}
+
+.menu-container__close-button {
+  cursor: pointer;
 }
