--- a/src/sass/_modal-footer.scss
+++ b/src/sass/_modal-footer.scss
@@ -1,3 +1,16 @@
+.form-modak_content{
+    display: flex;
+    // justify-content:space-between;
+}
+
+.momble-mod{
+    width: 50%;
+}
+
+.momble-mod+ .momble-mod{
+    margin-left:8px;
+}
+
 .call-back{
     margin-bottom: 12px;
     margin-right: 5%;
@@ -25,7 +38,7 @@
     top: 8px;
     right: 8px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--mobile-menu-bg-color);
+    background-color: var(--svg-bg-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,7 +52,7 @@
     width: 100%;
     outline: none;
     height: 40px;
-    padding: 12px 16px 12px 42px;
+    padding: 12px 16px 12px 15px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
