--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -6,7 +6,7 @@
         </svg>
     </button>
 
-    <button type="button"  class="menu-container__menu-button" data-mainmodal2-open>Buy now
+    <button type="button"  class="menu-container__menu-button" >Buy now
         <svg class="menu-container__menu-button-icon" width="5" height="8">
             <use href="./images/sprite.svg#icon-next2"></use>
         </svg>
