Анімація на герої

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -78,8 +78,7 @@
       </picture>
       <div class="hero-info__description">
         <p class="hero-info__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et
+          Ice cream contain at least 15% milk fat, and at least 20% total milk solids.
         </p>
         <a href="#" class="hero-info__link">
           <svg class="hero-info__icon" width="5" height="5">
