--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -80,7 +80,7 @@
         <p class="hero-info__text">
           Ice cream contain at least 15% milk fat, and at least 20% total milk solids.
         </p>
-        <a href="#" class="hero-info__link">
+        <a href="https://youtu.be/bdRhtMO1yd0" class="hero-info__link">
           <svg class="hero-info__icon" width="5" height="5">
             <use href="./images/sprite.svg#icon-arrow-right2  "></use>
           </svg>
